--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.544Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
+		"creation": "2025-04-07T14:31:44.619Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
 	},
 	{
 		"key": "datr",
@@ -14,8 +14,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
+		"creation": "2025-04-07T14:31:44.631Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
 	},
 	{
 		"key": "sb",
@@ -23,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
+		"creation": "2025-04-07T14:31:44.631Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
 	},
 	{
 		"key": "dpr",
@@ -32,8 +32,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
+		"creation": "2025-04-07T14:31:44.631Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
 	},
 	{
 		"key": "locale",
@@ -41,8 +41,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
+		"creation": "2025-04-07T14:31:44.631Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
 	},
 	{
 		"key": "wd",
@@ -50,8 +50,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
+		"creation": "2025-04-07T14:31:44.631Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
 	},
 	{
 		"key": "ps_l",
@@ -59,8 +59,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
+		"creation": "2025-04-07T14:31:44.631Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
 	},
 	{
 		"key": "ps_n",
@@ -68,8 +68,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
+		"creation": "2025-04-07T14:31:44.631Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
 	},
 	{
 		"key": "c_user",
@@ -77,6 +77,28 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
+		"creation": "2025-04-07T14:31:44.631Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
+	},
+	{
+		"key": "fr",
+		"value": "1ygoU9fhHOjyqLWU6.AWca9nYrIjfJq3tCIX8RZYXLRfjyp30oBjpE3AN6OlIUB15EST8.Bn825t..AAA.0.0.Bn8-G6.AWf7v6zLKxJusUgHfbyyRwRf00U",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-07T14:31:44.631Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
+	},
+	{
+		"key": "xs",
+		"value": "33%3A6pskLI9nATpfXA%3A2%3A1744036284%3A-1%3A6279",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-07T14:31:44.631Z",
+		"lastAccessed": "2025-04-07T14:31:44.631Z"
+	}
+]		"hostOnly": false,
 		"creation": "2025-04-07T08:25:03.546Z",
 		"lastAccessed": "2025-04-07T08:25:03.546Z"
 	},
