--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.619Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
+		"creation": "2025-04-07T22:57:28.734Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	},
 	{
 		"key": "datr",
@@ -14,8 +14,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.631Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	},
 	{
 		"key": "sb",
@@ -23,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.631Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	},
 	{
 		"key": "dpr",
@@ -32,8 +32,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.631Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	},
 	{
 		"key": "locale",
@@ -41,17 +41,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.631Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
-	},
-	{
-		"key": "wd",
-		"value": "800x1198",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.631Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	},
 	{
 		"key": "ps_l",
@@ -59,8 +50,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.631Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	},
 	{
 		"key": "ps_n",
@@ -68,8 +59,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.631Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	},
 	{
 		"key": "c_user",
@@ -77,56 +68,43 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.631Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	},
 	{
 		"key": "fr",
-		"value": "1ygoU9fhHOjyqLWU6.AWca9nYrIjfJq3tCIX8RZYXLRfjyp30oBjpE3AN6OlIUB15EST8.Bn825t..AAA.0.0.Bn8-G6.AWf7v6zLKxJusUgHfbyyRwRf00U",
+		"value": "13LdjAqe1iqM3Z5aj.AWdHCdCUnZox2ZDRqqFyvKh6F8HqI7idBSpw7hyEHeN1SiDCoH0.Bn9FXh..AAA.0.0.Bn9FXh.AWfeRspP2wX6OT2_lPKsjtQcfq8",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.631Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	},
 	{
 		"key": "xs",
-		"value": "33%3A6pskLI9nATpfXA%3A2%3A1744036284%3A-1%3A6279",
+		"value": "33%3A6pskLI9nATpfXA%3A2%3A1744036284%3A-1%3A6279%3A%3AAcUveZbn_PKoe8O43KGADibaldzIiBuMtpmSNvcajw",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T14:31:44.631Z",
-		"lastAccessed": "2025-04-07T14:31:44.631Z"
-	}
-]		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
-	},
-	{
-		"key": "fr",
-		"value": "1ygoU9fhHOjyqLWU6.AWfShqWKVuo2ZQIXvCO1vP_DcGjgM7E4PEl6ih7wFjg5SqWc5GE.Bn825t..AAA.0.0.Bn84ud.AWdJT0FagSYN9zSPr9JUcnCn4i8",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
-	},
-	{
-		"key": "xs",
-		"value": "29%3AZY0BeAr1btnnAw%3A2%3A1744014237%3A-1%3A6279",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	},
 	{
 		"key": "presence",
-		"value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1744014264521%2C%22v%22%3A1%7D",
+		"value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1744066629197%2C%22v%22%3A1%7D",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T08:25:03.546Z",
-		"lastAccessed": "2025-04-07T08:25:03.546Z"
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
+	},
+	{
+		"key": "wd",
+		"value": "800x1198",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-07T22:57:28.739Z",
+		"lastAccessed": "2025-04-07T22:57:28.739Z"
 	}
 ]
