--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.734Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
+		"creation": "2025-04-09T12:14:16.425Z",
+		"lastAccessed": "2025-04-09T12:14:16.432Z"
 	},
 	{
 		"key": "datr",
@@ -14,8 +14,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
+		"creation": "2025-04-09T12:14:16.432Z",
+		"lastAccessed": "2025-04-09T12:14:16.432Z"
 	},
 	{
 		"key": "sb",
@@ -23,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
+		"creation": "2025-04-09T12:14:16.432Z",
+		"lastAccessed": "2025-04-09T12:14:16.432Z"
 	},
 	{
 		"key": "dpr",
@@ -32,8 +32,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
+		"creation": "2025-04-09T12:14:16.432Z",
+		"lastAccessed": "2025-04-09T12:14:16.432Z"
 	},
 	{
 		"key": "locale",
@@ -41,8 +41,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
+		"creation": "2025-04-09T12:14:16.432Z",
+		"lastAccessed": "2025-04-09T12:14:16.432Z"
 	},
 	{
 		"key": "ps_l",
@@ -50,8 +50,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
+		"creation": "2025-04-09T12:14:16.432Z",
+		"lastAccessed": "2025-04-09T12:14:16.432Z"
 	},
 	{
 		"key": "ps_n",
@@ -59,44 +59,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
-	},
-	{
-		"key": "c_user",
-		"value": "61567380487188",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
-	},
-	{
-		"key": "fr",
-		"value": "13LdjAqe1iqM3Z5aj.AWdHCdCUnZox2ZDRqqFyvKh6F8HqI7idBSpw7hyEHeN1SiDCoH0.Bn9FXh..AAA.0.0.Bn9FXh.AWfeRspP2wX6OT2_lPKsjtQcfq8",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
-	},
-	{
-		"key": "xs",
-		"value": "33%3A6pskLI9nATpfXA%3A2%3A1744036284%3A-1%3A6279%3A%3AAcUveZbn_PKoe8O43KGADibaldzIiBuMtpmSNvcajw",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
-	},
-	{
-		"key": "presence",
-		"value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1744066629197%2C%22v%22%3A1%7D",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
+		"creation": "2025-04-09T12:14:16.432Z",
+		"lastAccessed": "2025-04-09T12:14:16.432Z"
 	},
 	{
 		"key": "wd",
@@ -104,7 +68,34 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-07T22:57:28.739Z",
-		"lastAccessed": "2025-04-07T22:57:28.739Z"
+		"creation": "2025-04-09T12:14:16.432Z",
+		"lastAccessed": "2025-04-09T12:14:16.432Z"
+	},
+	{
+		"key": "c_user",
+		"value": "61567380487188",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-09T12:14:16.433Z",
+		"lastAccessed": "2025-04-09T12:14:16.433Z"
+	},
+	{
+		"key": "xs",
+		"value": "18%3AGk1Zrq4Y4N20EA%3A2%3A1744200826%3A-1%3A6279",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-09T12:14:16.433Z",
+		"lastAccessed": "2025-04-09T12:14:16.433Z"
+	},
+	{
+		"key": "fr",
+		"value": "13LdjAqe1iqM3Z5aj.AWc89jBqYNBLQEb0iGyjU-mX-8CxyoUFVIznfGXDBjey7OutDwE.Bn9FXh..AAA.0.0.Bn9mR8.AWfvfLbSPMIoSgrO0t_Fh2dVjKc",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-09T12:14:16.433Z",
+		"lastAccessed": "2025-04-09T12:14:16.433Z"
 	}
 ]
