--- a/appstate.json
+++ b/appstate.json
@@ -1,39 +1,30 @@
 [
 	{
 		"key": "dbln",
-		"value": "%7B%2261567380487188%22%3A%22W7470PIl%22%7D",
+		"value": "%7B%2261567380487188%22%3A%22zYJQ0TLh%22%7D",
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.425Z",
-		"lastAccessed": "2025-04-09T12:14:16.432Z"
+		"creation": "2025-04-11T04:23:36.196Z",
+		"lastAccessed": "2025-04-11T04:23:36.197Z"
 	},
 	{
 		"key": "datr",
-		"value": "GBfyZ9z2Nh9fnbbP-O5kZ1o3",
+		"value": "KJj4Z3iiYhHGRoHozB0I5BYv",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.432Z",
-		"lastAccessed": "2025-04-09T12:14:16.432Z"
+		"creation": "2025-04-11T04:23:36.197Z",
+		"lastAccessed": "2025-04-11T04:23:36.197Z"
 	},
 	{
 		"key": "sb",
-		"value": "GBfyZ8nxc9_DEq5-jUJ2m-vg",
+		"value": "KJj4Z2O25kwP_gpqcZcpULj-",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.432Z",
-		"lastAccessed": "2025-04-09T12:14:16.432Z"
-	},
-	{
-		"key": "dpr",
-		"value": "1.5",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.432Z",
-		"lastAccessed": "2025-04-09T12:14:16.432Z"
+		"creation": "2025-04-11T04:23:36.197Z",
+		"lastAccessed": "2025-04-11T04:23:36.197Z"
 	},
 	{
 		"key": "locale",
@@ -41,35 +32,17 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.432Z",
-		"lastAccessed": "2025-04-09T12:14:16.432Z"
-	},
-	{
-		"key": "ps_l",
-		"value": "1",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.432Z",
-		"lastAccessed": "2025-04-09T12:14:16.432Z"
-	},
-	{
-		"key": "ps_n",
-		"value": "1",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.432Z",
-		"lastAccessed": "2025-04-09T12:14:16.432Z"
+		"creation": "2025-04-11T04:23:36.197Z",
+		"lastAccessed": "2025-04-11T04:23:36.197Z"
 	},
 	{
 		"key": "wd",
-		"value": "800x1198",
+		"value": "1366x633",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.432Z",
-		"lastAccessed": "2025-04-09T12:14:16.432Z"
+		"creation": "2025-04-11T04:23:36.197Z",
+		"lastAccessed": "2025-04-11T04:23:36.197Z"
 	},
 	{
 		"key": "c_user",
@@ -77,25 +50,34 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.433Z",
-		"lastAccessed": "2025-04-09T12:14:16.433Z"
+		"creation": "2025-04-11T04:23:36.197Z",
+		"lastAccessed": "2025-04-11T04:23:36.197Z"
 	},
 	{
 		"key": "xs",
-		"value": "18%3AGk1Zrq4Y4N20EA%3A2%3A1744200826%3A-1%3A6279",
+		"value": "21%3AcincDlFo1uj7GQ%3A2%3A1744345286%3A-1%3A6279",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.433Z",
-		"lastAccessed": "2025-04-09T12:14:16.433Z"
+		"creation": "2025-04-11T04:23:36.197Z",
+		"lastAccessed": "2025-04-11T04:23:36.197Z"
 	},
 	{
 		"key": "fr",
-		"value": "13LdjAqe1iqM3Z5aj.AWc89jBqYNBLQEb0iGyjU-mX-8CxyoUFVIznfGXDBjey7OutDwE.Bn9FXh..AAA.0.0.Bn9mR8.AWfvfLbSPMIoSgrO0t_Fh2dVjKc",
+		"value": "0hCPdplrzWgdT46oe.AWelzMEG_nfLD8ZhpbSfhOCbad0oAcnmv0a8tFsKsYnT3HuLxQ0.Bn-Jgo..AAA.0.0.Bn-JjO.AWe0LN6TKyx6aj4jt5qOBZqHLFM",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-09T12:14:16.433Z",
-		"lastAccessed": "2025-04-09T12:14:16.433Z"
+		"creation": "2025-04-11T04:23:36.197Z",
+		"lastAccessed": "2025-04-11T04:23:36.197Z"
+	},
+	{
+		"key": "presence",
+		"value": "C%7B%22lm3%22%3A%22g.9076548992430323%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1744345363389%2C%22v%22%3A1%7D",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-11T04:23:36.197Z",
+		"lastAccessed": "2025-04-11T04:23:36.197Z"
 	}
 ]
