--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2025-04-11T04:23:36.196Z",
-		"lastAccessed": "2025-04-11T04:23:36.197Z"
+		"creation": "2025-04-11T04:38:46.931Z",
+		"lastAccessed": "2025-04-11T04:38:46.936Z"
 	},
 	{
 		"key": "datr",
@@ -14,8 +14,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-11T04:23:36.197Z",
-		"lastAccessed": "2025-04-11T04:23:36.197Z"
+		"creation": "2025-04-11T04:38:46.936Z",
+		"lastAccessed": "2025-04-11T04:38:46.936Z"
 	},
 	{
 		"key": "sb",
@@ -23,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-11T04:23:36.197Z",
-		"lastAccessed": "2025-04-11T04:23:36.197Z"
+		"creation": "2025-04-11T04:38:46.936Z",
+		"lastAccessed": "2025-04-11T04:38:46.936Z"
 	},
 	{
 		"key": "locale",
@@ -32,8 +32,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-11T04:23:36.197Z",
-		"lastAccessed": "2025-04-11T04:23:36.197Z"
+		"creation": "2025-04-11T04:38:46.936Z",
+		"lastAccessed": "2025-04-11T04:38:46.936Z"
 	},
 	{
 		"key": "wd",
@@ -41,8 +41,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-11T04:23:36.197Z",
-		"lastAccessed": "2025-04-11T04:23:36.197Z"
+		"creation": "2025-04-11T04:38:46.936Z",
+		"lastAccessed": "2025-04-11T04:38:46.936Z"
 	},
 	{
 		"key": "c_user",
@@ -50,34 +50,34 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-11T04:23:36.197Z",
-		"lastAccessed": "2025-04-11T04:23:36.197Z"
-	},
-	{
-		"key": "xs",
-		"value": "21%3AcincDlFo1uj7GQ%3A2%3A1744345286%3A-1%3A6279",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-11T04:23:36.197Z",
-		"lastAccessed": "2025-04-11T04:23:36.197Z"
+		"creation": "2025-04-11T04:38:46.936Z",
+		"lastAccessed": "2025-04-11T04:38:46.936Z"
 	},
 	{
 		"key": "fr",
-		"value": "0hCPdplrzWgdT46oe.AWelzMEG_nfLD8ZhpbSfhOCbad0oAcnmv0a8tFsKsYnT3HuLxQ0.Bn-Jgo..AAA.0.0.Bn-JjO.AWe0LN6TKyx6aj4jt5qOBZqHLFM",
+		"value": "1nTaoWGkATgH5FdER.AWcKZj-byHagCqJcE1gVrIMEvQROHBVGrwWVSjgKJ7Fe8lWZN3w.Bn-JvR..AAA.0.0.Bn-JvR.AWdON90g4W-3cgf6I-0XsR2tREo",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-11T04:23:36.197Z",
-		"lastAccessed": "2025-04-11T04:23:36.197Z"
+		"creation": "2025-04-11T04:38:46.936Z",
+		"lastAccessed": "2025-04-11T04:38:46.936Z"
+	},
+	{
+		"key": "xs",
+		"value": "21%3AcincDlFo1uj7GQ%3A2%3A1744345286%3A-1%3A6279%3A%3AAcUEWprH5kKyiRF_uLzcakPne3-jiScc9mNSQrheFQ",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-11T04:38:46.936Z",
+		"lastAccessed": "2025-04-11T04:38:46.936Z"
 	},
 	{
 		"key": "presence",
-		"value": "C%7B%22lm3%22%3A%22g.9076548992430323%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1744345363389%2C%22v%22%3A1%7D",
+		"value": "C%7B%22t3%22%3A%5B%7B%22o%22%3A0%2C%22i%22%3A%22g.9076548992430323%22%7D%5D%2C%22utc3%22%3A1744346321217%2C%22v%22%3A1%7D",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-11T04:23:36.197Z",
-		"lastAccessed": "2025-04-11T04:23:36.197Z"
+		"creation": "2025-04-11T04:38:46.936Z",
+		"lastAccessed": "2025-04-11T04:38:46.936Z"
 	}
 ]
