--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
 	{
 		"key": "dbln",
-		"value": "%7B%2261575108542952%22%3A%22OAV38egH%22%7D",
+		"value": "%7B%2261575049445698%22%3A%22s8Q1bHU6%22%7D",
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.988Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
 	},
 	{
 		"key": "sb",
@@ -14,8 +14,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
 	},
 	{
 		"key": "locale",
@@ -23,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
 	},
 	{
 		"key": "ps_l",
@@ -32,8 +32,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
 	},
 	{
 		"key": "ps_n",
@@ -41,17 +41,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
-	},
-	{
-		"key": "wd",
-		"value": "1366x633",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
 	},
 	{
 		"key": "dpr",
@@ -59,17 +50,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
-	},
-	{
-		"key": "oo",
-		"value": "v1",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
 	},
 	{
 		"key": "datr",
@@ -77,34 +59,52 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
+	},
+	{
+		"key": "wd",
+		"value": "1366x633",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
 	},
 	{
 		"key": "c_user",
-		"value": "61575108542952",
+		"value": "61575049445698",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
-	},
-	{
-		"key": "fr",
-		"value": "1bGPiOzyg02jEZZIh.AWcc9b2VlXpCYSucBF0GCYSDHX7js9Sap1H0qQgfLkyiCNm_bGI.Bn_4hb..AAA.0.0.Bn_4hm.AWdHk5OgGofL9nL55TCZH2BHTJ4",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
 	},
 	{
 		"key": "xs",
-		"value": "4%3ACwmxDtgSJK8qLg%3A2%3A1744799846%3A-1%3A-1",
+		"value": "30%3AlztGANLJJ0VZVA%3A2%3A1744810163%3A-1%3A-1",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-04-16T10:37:57.989Z",
-		"lastAccessed": "2025-04-16T10:37:57.989Z"
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
+	},
+	{
+		"key": "oo",
+		"value": "v1%7C3%3A1744810164",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
+	},
+	{
+		"key": "presence",
+		"value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1744810181590%2C%22v%22%3A1%7D",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-16T13:35:30.300Z",
+		"lastAccessed": "2025-04-16T13:35:30.300Z"
 	}
 ]
