--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,101 @@
-
+[
+	{
+		"key": "dbln",
+		"value": "%7B%22100023643006888%22%3A%22h0PIqXqw%22%7D",
+		"domain": "facebook.com",
+		"path": "/login/device-based/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	},
+	{
+		"key": "wd",
+		"value": "1366x641",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	},
+	{
+		"key": "ps_l",
+		"value": "1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	},
+	{
+		"key": "ps_n",
+		"value": "1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	},
+	{
+		"key": "fr",
+		"value": "1AyVKvLxhEwlzG1la.AWcZup2aHk_8k-IaZ8_KZFaJeVesXqHYh0reCG6VFr-OGkKTLGM.BoAiao..AAA.0.0.BoAiao.AWcfxEWcbV8fNXBME87DkmlzTqE",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	},
+	{
+		"key": "xs",
+		"value": "1%3A3fP2ms2c21omcw%3A2%3A1744724676%3A-1%3A6343%3A%3AAcWNqOxHMLpVIPHA9fN74m_5WjzHGTbGOTPk9vMLz7E",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	},
+	{
+		"key": "presence",
+		"value": "C%7B%22lm3%22%3A%22sc.9629869513759471%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1744971528857%2C%22v%22%3A1%7D",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	},
+	{
+		"key": "datr",
+		"value": "W2L-Z6T5HLrvCxtNhozDguzU",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	},
+	{
+		"key": "sb",
+		"value": "W2L-Z4flSWcFlrjLh-ogHREO",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	},
+	{
+		"key": "locale",
+		"value": "en_GB",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	},
+	{
+		"key": "c_user",
+		"value": "100023643006888",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-04-18T10:19:13.397Z",
+		"lastAccessed": "2025-04-18T10:19:13.397Z"
+	}
+]
