--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "version": "1.2.14",
     "iconUnsend": {
         "status": true,
-        "icon": "😠"
+        "icon": "❤"
     },
     "NOTIFICATION": true,
     "language": "vi",
